add login process

--- a/Hanzo/Web.config
+++ b/Hanzo/Web.config
@@ -6,9 +6,14 @@
 <configuration>
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
+    <add key="BotId" value="YourBotId" />
+    <add key="MicrosoftAppId" value="" />
+    <add key="MicrosoftAppPassword" value="" />
+  <!--
     <add key="BotId" value="Hanzo" />
     <add key="MicrosoftAppId" value="80f3eb23-43d4-4cfb-baab-7d59dc47512a" />
     <add key="MicrosoftAppPassword" value="8aiCXQcDMVK3CNJWNfaJjkO" />
+  -->
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
