--- a/Hanzo/bin/Bot Application1.dll.config
+++ b/Hanzo/bin/Bot Application1.dll.config
@@ -6,9 +6,14 @@
 <configuration>
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
+    <add key="BotId" value="YourBotId" />
+    <add key="MicrosoftAppId" value="" />
+    <add key="MicrosoftAppPassword" value="" />
+    <!--
     <add key="BotId" value="Hanzo" />
     <add key="MicrosoftAppId" value="80f3eb23-43d4-4cfb-baab-7d59dc47512a" />
     <add key="MicrosoftAppPassword" value="8aiCXQcDMVK3CNJWNfaJjkO" />
+  -->
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -19,7 +24,7 @@
       </system.Web>
   -->
   <system.web>
-    <customErrors mode="Off" /> 
+    <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
   </system.web>
@@ -30,15 +35,23 @@
         <add value="default.htm" />
       </files>
     </defaultDocument>
-    
-  <handlers>
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Extensions" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.29.0" newVersion="2.2.29.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.29.0" newVersion="4.2.29.0" />
+      </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
